more descriptive index

--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,8 @@
 defaults:
   -
     scope:
-      path: ""
-      type: "pages"
+      path: ''
     values:
-      layout: "default"
+      layout: 'default'
 markdown: kramdown
 highlighter: pygments
